src/objects/PaymentAPISettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_TOKEN__c</fullName>
        <label>API_TOKEN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENTID__c</fullName>
        <label>CLIENTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLIENT_SECRET__c</fullName>
        <label>CLIENT_SECRET</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENDPOINTOAUTH__c</fullName>
        <label>ENDPOINTOAUTH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENDPOINT_PASSWORD__c</fullName>
        <label>ENDPOINT_PASSWORD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENDPOINT_USERNAME__c</fullName>
        <label>ENDPOINT_USERNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_INSTANCE__c</fullName>
        <label>SF_INSTANCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment API Settings</label>
</CustomObject>